fix item text-align

--- a/style.css
+++ b/style.css
@@ -53,7 +53,6 @@ h2 {
 
 .bottom .item {
 	padding: 10px;
-	text-align: center;
 	border-top: 1px solid rgba(55, 53, 47, 0.09);
 }
 
